Update Game model (added totalTimePlayed, number of rows, columns and mines) New Game creation and store completed Game history fetch games completed.
Next steps:

-Play game: Discover cells and put flags.
-Time tracking.

--- a/pom.xml
+++ b/pom.xml
@@ -354,12 +354,6 @@
             <version>2.9.5</version>
         </dependency>
         <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-core</artifactId>
-            <version>5.3.0.CR1</version>
-            <type>jar</type>
-        </dependency>
-        <dependency>
             <groupId>commons-dbcp</groupId>
             <artifactId>commons-dbcp</artifactId>
             <version>1.4</version>
@@ -376,6 +370,15 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.vladmihalcea</groupId>
+            <artifactId>hibernate-types-52</artifactId>
+            <version>2.9.11</version>
         </dependency>
         <dependency>
             <groupId>javax</groupId>
