Spring boot refactoring

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ jdbc.username=smedina
 jdbc.password=holasergio123.
 jdbc.hibernate.hbm2ddl.auto=update
 
+spring.main.web-application-type=none
+
 
 #No auth  protected 
 endpoints.shutdown.sensitive=false
