Gameplay fixes and improvements, more Spring boot libraries refactoring , Styles for board.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,19 @@ jdbc.driverClassName=org.postgresql.Driver
 jdbc.url=jdbc:postgresql://localhost:5440/minesweeperultimate
 jdbc.username=smedina
 jdbc.password=holasergio123.
-jdbc.hibernate.hbm2ddl.auto=update
+jdbc.hibernate.hbm2ddl.auto=create
 
-spring.main.web-application-type=none
+
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5440/minesweeperultimate
+spring.datasource.username=smedina
+spring.datasource.password=holasergio123.
+spring.jpa.hibernate.ddl-auto=create
+server.port = 8086
+
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
 
 
 #No auth  protected 
