--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,18 +4,13 @@
 	http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
          version="2.5">
 
-    <display-name>MinesweeperUltimate</display-name>
+    <display-name>Minesweeper_Ultimate</display-name>
     
 
     <!-- Location of Java @Configuration classes that configure the components that makeup this application -->
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>/WEB-INF/appconfig-root.xml</param-value>
-    </context-param>
-    
-    <context-param>
-        <param-name>webAppRootKey</param-name>
-        <param-value>uniqueAppRootNamee</param-value>
     </context-param>
 
     <filter>
@@ -54,7 +49,6 @@
         </context-param>
           
 
-        
         <listener>
             <listener-class>org.springframework.security.web.session.HttpSessionEventPublisher</listener-class>
         </listener>
